Fix opening tmux buffer in nvim; set cursor to last non-whitespace char.
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,7 +28,16 @@ set -g prefix C-b
 bind-key C-b send-prefix
 
 # Edit tmux buffer in nvim
-bind -n M-v capture-pane -J -S - \; save-buffer /tmp/tmux_buffer.txt \; display-popup -w 100% -h 100% -S fg=yellow,bg=black -E "nvim -c 'set ft=conf' '+ normal G\$?.' /tmp/tmux_buffer.txt; rm /tmp/tmux_buffer.txt"
+bind -n M-v run-shell ' \
+  tmp=$(mktemp); \
+  tmux capture-pane -J -S -; \
+  tmux save-buffer "$tmp"; \
+  tmux display-popup -w 100% -h 100% -S fg=yellow,bg=black -E " \
+     nvim -c \"set ft=conf\" \
+         -c \"lua vim.cmd([[normal Go]]) vim.fn.search([[\\\\S]], \\\"b\\\") vim.cmd([[normal jdG]])\" \
+         \"$tmp\"; \
+    rm \"$tmp\" \
+  "'
 
 bind-key ? list-keys
 bind-key d detach-client
