--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -94,7 +94,7 @@ bind-key \} swap-pane -D
 
 bind-key < command-prompt "rename-session '%%'"
 bind-key , command-prompt "rename-window '%%'"
-bind-key r source-file $HOME/.config/tmux/tmux.conf; display "Refreshed!"
+bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf; display "Refreshed!"
 
 # https://unix.stackexchange.com/a/25638
 # Prevent vim escape key delay
@@ -199,5 +199,5 @@ bind-key S run-shell ' \
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
-run-shell '$HOME/.config/tmux/plugins/tmux-resurrect/resurrect.tmux'
+run-shell '$XDG_CONFIG_HOME/tmux/plugins/tmux-resurrect/resurrect.tmux'
 
