--- a/i3wm/config
+++ b/i3wm/config
@@ -30,7 +30,8 @@ exec --no-startup-id test -f ~/Desktop/andreas-rocha-occultknowledge01.jpg && fe
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock -- sh -c 'dunstctl set-paused true; i3lock -unc 000000; dunstctl set-paused false'
+
+exec --no-startup-id xss-lock -- sh -c 'dunstctl set-paused true; xset dpms 1 1 1; i3lock -unc 000000; xset dpms 305 305 305; dunstctl set-paused false'
 exec --no-startup-id xset s 300 300
 exec --no-startup-id xset dpms 305 305 305
 # NetworkManager is the most popular way to manage wireless networks on Linux,
