'tmux list-sessions | grep...' instead of using 'tmux has-session'
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -76,7 +76,7 @@ bind-key p display-popup -E ' \
   else \
     name=$base; \
     i=1; \
-    while tmux has-session -t "$name" 2>/dev/null; do \
+    while tmux list-sessions | cut -d: -f1 | grep -q "^${name}$"; do \
       name="${base}@$((i++))"; \
     done; \
     tmux new-session -d -s "$name" -c "$dir" && tmux switch-client -t "$name"; \
@@ -200,4 +200,3 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 
 run-shell '$XDG_CONFIG_HOME/tmux/plugins/tmux-resurrect/resurrect.tmux'
-
