tmux: fix opencode window targeting to prevent cross-session conflicts
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -167,8 +167,8 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 
 # OpenCode window management - Press 'Alt + o' to create/switch to opencode window
 bind-key -n M-o run-shell ' \
-  if tmux select-window -t "opencode" 2>/dev/null; then \
-    opencode_running=$(tmux capture-pane -p | grep -c "opencode"); \
+  if tmux select-window -t ":opencode" 2>/dev/null; then \
+    opencode_running=$(pgrep -f "^opencode" | wc -l); \
     if [ "$opencode_running" -eq 0 ]; then \
       tmux send-keys "opencode" Enter; \
     fi; \
