tmux opencode window command: Alt-i
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -165,8 +165,8 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 
-# OpenCode window management - Press 'Alt + o' to create/switch to opencode window
-bind-key -n M-o run-shell ' \
+# OpenCode window management - Press 'Alt + i' to create/switch to opencode window
+bind-key -n M-i run-shell ' \
   if tmux select-window -t ":opencode" 2>/dev/null; then \
     opencode_running=$(pgrep -f "^opencode" | wc -l); \
     if [ "$opencode_running" -eq 0 ]; then \
