Remove magic from tmux opencode window opening keybind
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -167,15 +167,8 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 
 # OpenCode window management - Press 'Alt + i' to create/switch to opencode window
 bind-key -n M-i run-shell ' \
-  if tmux select-window -t ":opencode" 2>/dev/null; then \
-    opencode_running=$(pgrep -f "^opencode" | wc -l); \
-    if [ "$opencode_running" -eq 0 ]; then \
-      tmux send-keys "opencode" Enter; \
-    fi; \
-  else \
-    tmux new-window -n "opencode" -c "#{pane_current_path}" \; \
-    send-keys "opencode" Enter; \
-  fi'
+  tmux select-window -t ":opencode" 2>/dev/null || \
+  tmux new-window -n "opencode" -c "#{pane_current_path}" \; send-keys "opencode" Enter'
 
 # Toggle pane sync and change border color based on status
 bind-key S run-shell ' \
