--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
+set-option -ga terminal-features ",xterm-ghostty:RGB"
+set -g default-terminal "tmux-256color"
 set -g extended-keys on
 
 set-option -g status-style bg=default,fg=white
