qol: hyprland and waybar
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -2,8 +2,8 @@
 
 # Monitor config (adjust to your setup)
 # Use `hyprctl monitors` to find names
-monitor = HDMI-A-1, preferred, 0x0, 1
-monitor = eDP-1, preferred, 1920x0, 1
+monitor = HDMI-A-1, preferred@60, 0x0, 1
+monitor = eDP-1, preferred@60, 1920x0, 1
 
 # Workspace assignments
 workspace = 1, monitor:HDMI-A-1
@@ -76,7 +76,7 @@ input {
     follow_mouse = 1
     accel_profile = flat
     sensitivity = 0
-    repeat_rate = 200
+    repeat_rate = 50
     repeat_delay = 300
     touchpad {
         natural_scroll = true
