--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,7 +34,7 @@ bind -n M-v run-shell ' \
   tmux save-buffer "$tmp"; \
   tmux display-popup -w 100% -h 100% -S fg=yellow,bg=black -E " \
      nvim -c \"set ft=conf\" \
-         -c \"lua vim.api.nvim_create_autocmd(\\\"BufReadPost\\\", { once = true, callback = function() vim.cmd([[normal Go]]) vim.fn.search([[\\\\S]], \\\"b\\\") vim.cmd([[normal jdG]]) vim.bo.modified = false end })\" \
+         -c \"lua vim.api.nvim_create_autocmd(\\\"BufReadPost\\\", { once = true, callback = function() vim.schedule(function() vim.cmd([[normal Go]]) vim.fn.search([[\\\\S]], \\\"b\\\") vim.cmd([[normal jdG]]) vim.bo.modified = false end) end })\" \
          \"$tmp\"; \
     rm \"$tmp\" \
   "'
