hack?(ghostty): remove black bar at the bottom by adjusting cell height
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/ghostty/config
+++ b/ghostty/config
@@ -35,3 +35,4 @@ keybind = ctrl+shift+l=goto_split:right
 clipboard-paste-protection = false
 clipboard-trim-trailing-spaces = false
 copy-on-select = false
+adjust-cell-height = -1
