--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -113,7 +113,7 @@ setw -g mouse on
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 
 bind-key -n M-\{ switch-client -p
