update hyprlock styling
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -20,4 +20,9 @@ input-field {
     position = 0, 0
     halign = center
     valign = center
+
+    fail_color = rgb(e74c3c)
+    fail_text = $FAIL ($ATTEMPTS)
+    fail_timeout = 2000
+    fail_transition = 300
 }
