--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -4,6 +4,7 @@
 # Use `hyprctl monitors` to find names
 monitor = HDMI-A-1, preferred@60, 0x0, 1
 monitor = eDP-1, preferred@60, 1920x0, 1
+monitor = , preferred, auto, 1  # Fallback for any other monitor
 
 # Workspace assignments
 workspace = 1, monitor:HDMI-A-1
@@ -67,7 +68,7 @@ animations {
     animation = windowsOut, 1, 1, default
     animation = fade, 1, 1, default
     animation = workspaces, 1, 1, default
-    animation = layers, 0
+    animation = layers, 1, 2, default
 }
 
 # Input
