limit audio volume to 200%. volume based audio coloring css for waybar
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -164,9 +164,9 @@ bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
 binde = $mod SHIFT, B, exec, brightnessctl set 5%+ && notify-send -h string:x-dunst-stack-tag:brightness "Brightness: +5%"
 binde = $mod, B, exec, brightnessctl set 5%- && notify-send -h string:x-dunst-stack-tag:brightness "Brightness: -5%"
 
-# Volume (binde = repeatable when held)
-binde = $mod SHIFT, V, exec, pactl set-sink-volume @DEFAULT_SINK@ +5% && notify-send -h string:x-dunst-stack-tag:audio "Volume: +5%"
-binde = $mod, V, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && notify-send -h string:x-dunst-stack-tag:audio "Volume: -5%"
+# Volume (binde = repeatable when held) - capped at 200%
+binde = $mod SHIFT, V, exec, vol=$(pactl get-sink-volume @DEFAULT_SINK@ | grep -Po '\d+(?=%)' | head -1); [ "$vol" -lt 200 ] && pactl set-sink-volume @DEFAULT_SINK@ +5%; notify-send -h string:x-dunst-stack-tag:audio "Volume: $(pactl get-sink-volume @DEFAULT_SINK@ | grep -Po '\d+(?=%)' | head -1)%"
+binde = $mod, V, exec, pactl set-sink-volume @DEFAULT_SINK@ -5% && notify-send -h string:x-dunst-stack-tag:audio "Volume: $(pactl get-sink-volume @DEFAULT_SINK@ | grep -Po '\d+(?=%)' | head -1)%"
 bind = $mod SHIFT, M, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle && notify-send -h string:x-dunst-stack-tag:audio "Audio Muted: $(pactl get-sink-mute @DEFAULT_SINK@ | awk '{print $2}')"
 bind = $mod, M, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle && notify-send -h string:x-dunst-stack-tag:audio "Mic Muted: $(pactl get-source-mute @DEFAULT_SOURCE@ | awk '{print $2}')"
 
