hyprlock: immediately render and hide cursor upon lock
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprlock.conf
+++ b/hyprland/hyprlock.conf
@@ -1,5 +1,14 @@
 # Hyprlock config
 
+general {
+    hide_cursor = true
+    immediate_render = true
+}
+
+animations {
+    enabled = false
+}
+
 background {
     monitor =
     color = rgb(000000)
