--- a/waybar/config
+++ b/waybar/config
@@ -26,6 +26,7 @@
         "interval": 10,
         "format": "{icon} {capacity}%",
         "format-charging": "󰂄 {capacity}%",
+        "format-full": "󰂄 {capacity}%",
         "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
         "states": {
             "warning": 30,
