hyprpaper: set new wallpapers
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,7 +1,12 @@
 # Hyprpaper config
 
-preload = ~/Desktop/andreas-rocha-occultknowledge01.jpg
-wallpaper = ,~/Desktop/andreas-rocha-occultknowledge01.jpg
+# Preload wallpapers
+preload = ~/wallpapers/wallhaven-dp821g.jpg
+preload = ~/wallpapers/wallhaven-greensky-windowview.jpg
+
+# Set wallpaper per monitor
+wallpaper = eDP-1,~/wallpapers/wallhaven-dp821g.jpg
+wallpaper = HDMI-A-1,~/wallpapers/wallhaven-greensky-windowview.jpg
 
 ipc = off
 splash = false
