hyprland: bind mod + shift + s to toggle dunst pause status
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -186,6 +186,7 @@ bind = $mod, Escape, exec, loginctl lock-session
 # Group/tabbed layout
 bind = $mod, W, togglegroup
 bind = $mod, S, togglesplit
+bind = $mod SHIFT, S, exec, dunstctl set-paused toggle && notify-send -h string:x-dunst-stack-tag:dunst "Dunst $(dunstctl is-paused | grep -q true && echo Paused || echo Resumed)"
 
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
