--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,12 +1,12 @@
 # Hyprpaper config
 
 # Preload wallpapers
-preload = ~/wallpapers/wallhaven-dp821g.jpg
-preload = ~/wallpapers/wallhaven-greensky-windowview.jpg
+preload = $HOME/wallpapers/wallhaven-dp821g.jpg
+preload = $HOME/wallpapers/wallhaven-greensky-windowview.jpg
 
-# Set wallpaper per monitor
-wallpaper = eDP-1,~/wallpapers/wallhaven-dp821g.jpg
-wallpaper = HDMI-A-1,~/wallpapers/wallhaven-greensky-windowview.jpg
+# Use `hyprctl monitors` to find names
+wallpaper = eDP-1,$HOME/wallpapers/wallhaven-dp821g.jpg
+wallpaper = HDMI-A-1,$HOME/wallpapers/wallhaven-greensky-windowview.jpg
 
 ipc = off
 splash = false
