fix tmux session switcher keybind
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,21 +48,21 @@ bind-key z resize-pane -Z
 # bind-key s choose-tree -s
 
 # Session switcher with fzf popup
-bind-key s display-popup -E " \
-  original_session=\$(tmux display-message -p '#S'); \
-  selected=\$( \
-    (tmux list-sessions | grep \"^\$original_session:\"; \
-     tmux list-sessions | grep -v \"^\$original_session:\") \
+bind-key s display-popup -E ' \
+  original_session=$(tmux display-message -p "#S"); \
+  selected=$( \
+    (tmux list-sessions | grep "^$original_session:"; \
+     tmux list-sessions | grep -v "^$original_session:") \
     | fzf \
-      --bind='ctrl-x:execute(echo {} | cut -d: -f1 | xargs tmux kill-session -t)+reload(tmux list-sessions)' \
-      --bind='focus:execute-silent(tmux switch-client -t {1})' \
-      --delimiter=':' \
+      --bind="ctrl-x:execute(echo {} | cut -d: -f1 | xargs tmux kill-session -t)+reload(tmux list-sessions | grep \"^$original_session:\"; tmux list-sessions | grep -v \"^$original_session:\")" \
+      --bind="focus:execute-silent(tmux switch-client -t {1})" \
+      --delimiter=":" \
     | cut -d: -f1 \
   ); \
-  tmux switch-client -t \"\$original_session\"; \
-  if [ -n \"\$selected\" ]; then \
-    tmux switch-client -t \"\$selected\"; \
-  fi"
+  tmux switch-client -t "$original_session"; \
+  if [ -n "$selected" ]; then \
+    tmux switch-client -t "$selected"; \
+  fi'
 
 # Create/Switch sessions for Zoxide directories
 bind-key p display-popup -E ' \
