use environment.d for XDG variables as single source of truth
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,12 +1,12 @@
 # Hyprpaper config
 
 # Preload wallpapers
-preload = $HOME/.local/share/wallpapers/wallhaven-dp821g.jpg
-preload = $HOME/.local/share/wallpapers/wallhaven-greensky-windowview.jpg
+preload = $XDG_DATA_HOME/wallpapers/wallhaven-dp821g.jpg
+preload = $XDG_DATA_HOME/wallpapers/wallhaven-greensky-windowview.jpg
 
 # Use `hyprctl monitors` to find names
-wallpaper = eDP-1,$HOME/.local/share/wallpapers/wallhaven-dp821g.jpg
-wallpaper = HDMI-A-1,$HOME/.local/share/wallpapers/wallhaven-greensky-windowview.jpg
+wallpaper = eDP-1,$XDG_DATA_HOME/wallpapers/wallhaven-dp821g.jpg
+wallpaper = HDMI-A-1,$XDG_DATA_HOME/wallpapers/wallhaven-greensky-windowview.jpg
 
 ipc = off
 splash = false
