wofi: add rounded borders, ctrl+n/p navigation, prevent duplicate instances
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -100,7 +100,7 @@ misc {
 # Keybindings
 bind = $mod, Return, exec, $terminal
 bind = $mod SHIFT, W, killactive
-bind = $mod, D, exec, wofi
+bind = $mod, D, exec, pidof wofi || wofi
 bind = $mod, F, fullscreen
 bind = $mod SHIFT, Space, togglefloating
 bind = $mod, Space, cyclenext  # Focus between tiling/floating
