hyprland: add zoom in/out keybinds
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -50,6 +50,11 @@ general {
     layout = dwindle
 }
 
+# Whole-screen zoom
+bind = $mod, mouse_down, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 2')
+bind = $mod, mouse_up, exec, hyprctl -q keyword cursor:zoom_factor $(hyprctl getoption cursor:zoom_factor -j | jq '[(.float / 2), 1] | max')
+bindc = $mod, mouse:274, exec, hyprctl -q keyword cursor:zoom_factor 1.0
+
 # Decoration
 decoration {
     rounding = 0
@@ -69,6 +74,7 @@ animations {
     animation = fade, 1, 1, default
     animation = workspaces, 1, 1, default
     animation = layers, 1, 2, default
+    animation = zoomFactor, 1, 2, default
 }
 
 # Input
