hyprland: script for flashing window upon focus change
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -26,6 +26,7 @@ exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = dunst
 exec-once = waybar
 exec-once = hypridle
+exec-once = $XDG_CONFIG_HOME/hypr/border-flash.sh
 
 # Nvidia specific (remove if not on Nvidia)
 env = LIBVA_DRIVER_NAME,nvidia
@@ -44,9 +45,9 @@ $terminal = ghostty
 general {
     gaps_in = 0
     gaps_out = 0
-    border_size = 0
-    col.active_border = rgba(ffffffee)
-    col.inactive_border = rgba(595959aa)
+    border_size = 1
+    col.active_border = rgba(000000ff)
+    col.inactive_border = rgba(000000ff)
     layout = dwindle
 }
 
