--- a/hyprland/hypridle.conf
+++ b/hyprland/hypridle.conf
@@ -11,7 +11,7 @@ general {
 # Lock screen after 5 minutes
 listener {
     timeout = 300
-    on-timeout = hyprctl dispatch dpms off && loginctl lock-session
+    on-timeout = loginctl lock-session; hyprctl dispatch dpms off
 }
 
 listener {
