--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -2,23 +2,17 @@
 
 # Monitor config (adjust to your setup)
 # Use `hyprctl monitors` to find names
-monitor = HDMI-A-1, preferred@60, 0x0, 1
-monitor = eDP-1, preferred@60, 1920x0, 1
-monitor = , preferred, auto, 1  # Fallback for any other monitor
 
-# Workspace assignments
-workspace = 1, monitor:HDMI-A-1
-workspace = 2, monitor:HDMI-A-1
-workspace = 3, monitor:HDMI-A-1
-workspace = 4, monitor:eDP-1
-workspace = 5, monitor:eDP-1
-workspace = 6, monitor:eDP-1
-workspace = 7, monitor:HDMI-A-1
-workspace = 8, monitor:HDMI-A-1
-workspace = 9, monitor:HDMI-A-1
-workspace = 10, monitor:eDP-1
+$mon1 = HDMI-A-1
+$mon2 = eDP-1
 
-# Startup
+monitor = $mon1, preferred@60, 0x0, 1
+monitor = $mon2, preferred@60, 1920x0, 1
+monitor = , preferred, auto, 1
+
+workspace = 1, monitor:$mon1, default:true
+workspace = 4, monitor:$mon2, default:true
+
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --all
 exec-once = systemctl --user start hyprpolkitagent
@@ -193,7 +187,7 @@ bind = $mod, Escape, exec, loginctl lock-session
 # Group/tabbed layout
 bind = $mod, W, togglegroup
 bind = $mod, S, togglesplit
-bind = $mod SHIFT, S, exec, dunstctl set-paused toggle && pkill -RTMIN+1 waybar && notify-send -h string:x-dunst-stack-tag:dunst "Dunst $(dunstctl is-paused | grep -q true && echo Paused || echo Resumed)"
+bind = $mod SHIFT, S, exec, dunstctl set-paused toggle && pkill -RTMIN+1 waybar
 
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
