--- a/waybar/config
+++ b/waybar/config
@@ -18,7 +18,7 @@
     },
 
     "clock": {
-        "format": " {:%d/%b/%Y  %H:%M}",
+        "format": " {:%a %d/%b/%Y  %H:%M}",
         "tooltip-format": "Date and Time"
     },
 
