bind mod + print to use satty for alternative screenshot approach
required for "instantly" freezing the screen and then cropping it

Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -160,6 +160,7 @@ submap = reset
 
 # Screenshot (grim + slurp)
 bind = , Print, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mod, Print, exec, grim - | satty -f - --fullscreen --init-tool crop --copy-command "wl-copy"
 
 # Brightness (binde = repeatable when held)
 binde = $mod SHIFT, B, exec, brightnessctl set 5%+ && notify-send -h string:x-dunst-stack-tag:brightness "Brightness: +5%"
