--- a/tlp/tlp.conf
+++ b/tlp/tlp.conf
@@ -2,3 +2,4 @@
 # Stop charging at 80% to preserve battery health
 # See https://linrunner.de/tlp/settings/battery.html
 STOP_CHARGE_THRESH_BAT0=80
+STOP_CHARGE_THRESH_BAT1=80
