hyprpaper: migrate config to 0.8.0
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprpaper.conf
+++ b/hyprland/hyprpaper.conf
@@ -1,12 +1,16 @@
 # Hyprpaper config
 
-# Preload wallpapers
-preload = $XDG_DATA_HOME/wallpapers/wallhaven-dp821g.jpg
-preload = $XDG_DATA_HOME/wallpapers/wallhaven-greensky-windowview.jpg
+wallpaper {
+    monitor = eDP-1
+    path = $XDG_DATA_HOME/wallpapers/wallhaven-dp821g.jpg
+    fit_mode = cover
+}
 
-# Use `hyprctl monitors` to find names
-wallpaper = eDP-1,$XDG_DATA_HOME/wallpapers/wallhaven-dp821g.jpg
-wallpaper = HDMI-A-1,$XDG_DATA_HOME/wallpapers/wallhaven-greensky-windowview.jpg
+wallpaper {
+    monitor = HDMI-A-1
+    path = $XDG_DATA_HOME/wallpapers/wallhaven-greensky-windowview.jpg
+    fit_mode = cover
+}
 
-ipc = off
-splash = false
+ipc = true
+splash = true
