reimplement the fuzzy file/dir pickers using tmux popups
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,6 +173,22 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 
+# Fuzzy file picker - insert relative path into pane
+bind-key -n M-f run-shell ' \
+  pane_id="#{pane_id}"; \
+  tmux display-popup -E -w 80% -h 60% -d "#{pane_current_path}" " \
+    selected=\$(fd --type f --hidden --exclude .git | fzf); \
+    [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
+  " || true'
+
+# Fuzzy directory picker - insert relative path into pane
+bind-key -n M-d run-shell ' \
+  pane_id="#{pane_id}"; \
+  tmux display-popup -E -w 80% -h 60% -d "#{pane_current_path}" " \
+    selected=\$(fd --type d --hidden --exclude .git | fzf); \
+    [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
+  " || true'
+
 # OpenCode window management - Press 'Alt + i' to create/switch to opencode window
 bind-key -n M-i run-shell ' \
   tmux select-window -t ":opencode" 2>/dev/null || \
