--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -102,7 +102,7 @@ bind-key \} swap-pane -D
 
 bind-key < command-prompt "rename-session '%%'"
 bind-key , command-prompt "rename-window '%%'"
-bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf; display "Refreshed!"
+bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf \; display "Refreshed!"
 
 # https://unix.stackexchange.com/a/25638
 # Prevent vim escape key delay
