make sure tmux fuzzy finder is neovim aware
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,18 +173,48 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 
-# Fuzzy file picker - insert relative path into pane
+# Fuzzy file picker (nvim-aware)
 bind-key -n M-f run-shell ' \
   pane_id="#{pane_id}"; \
-  tmux display-popup -E -w 80% -h 60% -d "#{pane_current_path}" " \
+  get_path() { \
+    nvim_pid=$(pgrep -P "#{pane_pid}" -x nvim 2>/dev/null | head -1); \
+    if [ -n "$nvim_pid" ]; then \
+      embed_pid=$(pgrep -P "$nvim_pid" 2>/dev/null | head -1); \
+      sock="/run/user/$(id -u)/nvim.${embed_pid}.0"; \
+      if [ -S "$sock" ]; then \
+        dir=$(nvim --server "$sock" --remote-expr "expand(\"%:p:h\")" 2>/dev/null); \
+        { [ -z "$dir" ] || [ "${dir#*://}" != "$dir" ] || [ ! -d "$dir" ]; } && \
+          dir=$(nvim --server "$sock" --remote-expr "getcwd()" 2>/dev/null); \
+        [ -d "$dir" ] && echo "$dir" && return; \
+      fi; \
+    fi; \
+    echo "#{pane_current_path}"; \
+  }; \
+  picker_path=$(get_path); \
+  tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
     selected=\$(fd --type f --hidden --exclude .git | fzf); \
     [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
   " || true'
 
-# Fuzzy directory picker - insert relative path into pane
+# Fuzzy directory picker (nvim-aware)
 bind-key -n M-d run-shell ' \
   pane_id="#{pane_id}"; \
-  tmux display-popup -E -w 80% -h 60% -d "#{pane_current_path}" " \
+  get_path() { \
+    nvim_pid=$(pgrep -P "#{pane_pid}" -x nvim 2>/dev/null | head -1); \
+    if [ -n "$nvim_pid" ]; then \
+      embed_pid=$(pgrep -P "$nvim_pid" 2>/dev/null | head -1); \
+      sock="/run/user/$(id -u)/nvim.${embed_pid}.0"; \
+      if [ -S "$sock" ]; then \
+        dir=$(nvim --server "$sock" --remote-expr "expand(\"%:p:h\")" 2>/dev/null); \
+        { [ -z "$dir" ] || [ "${dir#*://}" != "$dir" ] || [ ! -d "$dir" ]; } && \
+          dir=$(nvim --server "$sock" --remote-expr "getcwd()" 2>/dev/null); \
+        [ -d "$dir" ] && echo "$dir" && return; \
+      fi; \
+    fi; \
+    echo "#{pane_current_path}"; \
+  }; \
+  picker_path=$(get_path); \
+  tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
     selected=\$(fd --type d --hidden --exclude .git | fzf); \
     [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
   " || true'
