tmux: show pwd in prompt while fuzzy finding files/dirs
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -192,7 +192,7 @@ bind-key -n M-f run-shell ' \
   }; \
   picker_path=$(get_path); \
   tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
-    selected=\$(fd --type f --hidden --exclude .git | fzf); \
+    selected=\$(fd --type f --hidden --exclude .git | fzf --prompt \"$picker_path/\"); \
     [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
   " || true'
 
@@ -215,7 +215,7 @@ bind-key -n M-d run-shell ' \
   }; \
   picker_path=$(get_path); \
   tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
-    selected=\$(fd --type d --hidden --exclude .git | fzf); \
+    selected=\$(fd --type d --hidden --exclude .git | fzf --prompt \"$picker_path/\"); \
     [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
   " || true'
 
