tmux: polish up fuzzy file/dir finder
now aware of the current mode in neovim; avoids running arbitrary normal
mode commands if not in insert/cmdline/terminal modes

Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,51 +173,36 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 
-# Fuzzy file picker (nvim-aware)
-bind-key -n M-f run-shell ' \
+# Shared fuzzy picker logic (nvim-aware)
+# Detects nvim and gets working path from nvim if available
+# Only sends keys to nvim if in insert, cmdline, or terminal mode
+%hidden FUZZY_PICK_BASE=' \
   pane_id="#{pane_id}"; \
-  get_path() { \
-    nvim_pid=$(pgrep -P "#{pane_pid}" -x nvim 2>/dev/null | head -1); \
-    if [ -n "$nvim_pid" ]; then \
-      embed_pid=$(pgrep -P "$nvim_pid" 2>/dev/null | head -1); \
-      sock="/run/user/$(id -u)/nvim.${embed_pid}.0"; \
-      if [ -S "$sock" ]; then \
-        dir=$(nvim --server "$sock" --remote-expr "expand(\"%:p:h\")" 2>/dev/null); \
-        { [ -z "$dir" ] || [ "${dir#*://}" != "$dir" ] || [ ! -d "$dir" ]; } && \
-          dir=$(nvim --server "$sock" --remote-expr "getcwd()" 2>/dev/null); \
-        [ -d "$dir" ] && echo "$dir" && return; \
-      fi; \
+  nvim_pid=$(pgrep -P "#{pane_pid}" -x nvim 2>/dev/null | head -1); \
+  if [ -n "$nvim_pid" ]; then \
+    embed_pid=$(pgrep -P "$nvim_pid" 2>/dev/null | head -1); \
+    sock="/run/user/$(id -u)/nvim.${embed_pid}.0"; \
+    if [ -S "$sock" ]; then \
+      dir=$(nvim --server "$sock" --remote-expr "expand(\"%:p:h\")" 2>/dev/null); \
+      { [ -z "$dir" ] || [ "${dir#*://}" != "$dir" ] || [ ! -d "$dir" ]; } && \
+        dir=$(nvim --server "$sock" --remote-expr "getcwd()" 2>/dev/null); \
+      mode=$(nvim --server "$sock" --remote-expr "mode()" 2>/dev/null); \
+      case "$mode" in i*|c*|t*) can_send=1;; *) can_send=0;; esac; \
     fi; \
-    echo "#{pane_current_path}"; \
-  }; \
-  picker_path=$(get_path); \
+  fi; \
+  picker_path="${dir:-#{pane_current_path}}"; \
+  can_send="${can_send:-1}"; \
   tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
-    selected=\$(fd --type f --hidden --exclude .git | fzf --prompt \"$picker_path/\"); \
-    [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
+    selected=\$(fd --type $fd_type --hidden --exclude .git | fzf --prompt \"$picker_path/\"); \
+    [ -n \"\$selected\" ] && [ \"$can_send\" = \"1\" ] && \
+      tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
   " || true'
 
+# Fuzzy file picker (nvim-aware)
+bind-key -n M-f run-shell 'fd_type=f; '"$FUZZY_PICK_BASE"
+
 # Fuzzy directory picker (nvim-aware)
-bind-key -n M-d run-shell ' \
-  pane_id="#{pane_id}"; \
-  get_path() { \
-    nvim_pid=$(pgrep -P "#{pane_pid}" -x nvim 2>/dev/null | head -1); \
-    if [ -n "$nvim_pid" ]; then \
-      embed_pid=$(pgrep -P "$nvim_pid" 2>/dev/null | head -1); \
-      sock="/run/user/$(id -u)/nvim.${embed_pid}.0"; \
-      if [ -S "$sock" ]; then \
-        dir=$(nvim --server "$sock" --remote-expr "expand(\"%:p:h\")" 2>/dev/null); \
-        { [ -z "$dir" ] || [ "${dir#*://}" != "$dir" ] || [ ! -d "$dir" ]; } && \
-          dir=$(nvim --server "$sock" --remote-expr "getcwd()" 2>/dev/null); \
-        [ -d "$dir" ] && echo "$dir" && return; \
-      fi; \
-    fi; \
-    echo "#{pane_current_path}"; \
-  }; \
-  picker_path=$(get_path); \
-  tmux display-popup -E -w 80% -h 60% -d "$picker_path" " \
-    selected=\$(fd --type d --hidden --exclude .git | fzf --prompt \"$picker_path/\"); \
-    [ -n \"\$selected\" ] && tmux send-keys -t \"$pane_id\" -- \"\$(printf %q \"\$selected\")\" \
-  " || true'
+bind-key -n M-d run-shell 'fd_type=d; '"$FUZZY_PICK_BASE"
 
 # OpenCode window management - Press 'Alt + i' to create/switch to opencode window
 bind-key -n M-i run-shell ' \
