--- a/waybar/config
+++ b/waybar/config
@@ -74,9 +74,8 @@
 
     "cpu": {
         "interval": 5,
-        "format": " {usage}%",
-        "tooltip-format": "CPU usage",
-        "on-click": "gnome-system-monitor",
+        "format": " {usage}%",
+        "tooltip-format": "CPU: Run btop for detailed process info",
         "states": {
             "warning": 70,
             "critical": 90
@@ -85,9 +84,8 @@
 
     "memory": {
         "interval": 5,
-        "format": " {used:0.1f}GB/{total:0.1f}GB",
-        "tooltip-format": "Memory usage",
-        "on-click": "gnome-system-monitor",
+        "format": " {used:0.1f}GB/{total:0.1f}GB",
+        "tooltip-format": "Memory: Run btop for detailed process info",
         "states": {
             "warning": 75,
             "critical": 90
