hyprland: increase touchpad sensitivity
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -82,7 +82,14 @@ input {
     repeat_delay = 300
     touchpad {
         natural_scroll = true
+        tap-and-drag = false
     }
+}
+
+# Found the name through: hyprctl devices | grep -i -A 2 'touchpad'
+device {
+    name = elan1203:00-04f3:307a-touchpad
+    sensitivity = 20
 }
 
 # Dwindle layout
