--- a/waybar/config
+++ b/waybar/config
@@ -74,7 +74,7 @@
 
     "cpu": {
         "interval": 5,
-        "format": " {usage}%",
+        "format": " {usage}%",
         "tooltip-format": "CPU: Run btop for detailed process info",
         "states": {
             "warning": 70,
@@ -84,7 +84,7 @@
 
     "memory": {
         "interval": 5,
-        "format": " {used:0.1f}GB/{total:0.1f}GB",
+        "format": " {used:0.1f}GB/{total:0.1f}GB",
         "tooltip-format": "Memory: Run btop for detailed process info",
         "states": {
             "warning": 75,
