hyprland: disable exit keybind
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -151,8 +151,8 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Reload config
 bind = $mod SHIFT, R, exec, hyprctl reload
-# Exit hyprland
-bind = $mod SHIFT, E, exit
+# # Exit hyprland
+# bind = $mod SHIFT, E, exit
 
 # Resize submap
 bind = $mod, R, submap, resize
