Add cliphist to packages. Update hyprland config accordingly
Signed-off-by: sami <samiulsami7786@gmail.com>

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = dunst
 exec-once = waybar
 exec-once = hypridle
 exec-once = $XDG_CONFIG_HOME/hypr/border-flash.sh
+exec-once = wl-paste --watch cliphist store
 
 # Nvidia specific (remove if not on Nvidia)
 env = LIBVA_DRIVER_NAME,nvidia
@@ -109,6 +110,7 @@ misc {
 bind = $mod, Return, exec, $terminal
 bind = $mod SHIFT, W, killactive
 bind = $mod, D, exec, pidof wofi || wofi
+bind = $mod SHIFT, C, exec, cliphist list | wofi -S dmenu | cliphist decode | wl-copy
 bind = $mod, F, fullscreen
 bind = $mod SHIFT, Space, togglefloating
 bind = $mod, Space, cyclenext  # Focus between tiling/floating
